kubernetes/unifi/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongodb
spec:
  type: ClusterIP
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: mongodb
  selector:
    primary: "true"
