kubernetes/unifi/mongodb/networkpolicy.yaml
# mongodb is only accessible by unifi controller instances within the same namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mongodb-internal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  ingress:
  - from:
    - podSelector: {}
